git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/rice-2.0@2833 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/build.xml
+++ b/deploy/build.xml
@@ -30,6 +30,24 @@
   <property name="config.home" value="/home/${tomcat.instance}/kuali/main/${deploy.environment}" />
   <property name="ssh.verbose" value="false" />
 
+  <target name="checkout">
+    <condition property="checkout.properties">
+      <and>
+        <isset property="deploy.impex.location" />
+        <isset property="manifest.SVN-Revision" />
+      </and>
+    </condition>
+    <fail unless="checkout.properties">Missing checkout properties</fail>
+    <property name="manifest.svn.url" value="${deploy.impex.location}@${manifest.SVN-Revision}" />
+    <property name="checkout.dir" value="target/checkout/impex" />
+    <echo>Checking out ${manifest.svn.url}</echo>
+    <exec executable="svn">
+      <arg value="checkout" />
+      <arg value="${manifest.svn.url}" />
+      <arg value="${checkout.dir}" />
+    </exec>
+  </target>
+
   <target name="ssh-exec">
     <condition property="ssh.properties">
       <and>
