git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/rice-2.0@2835 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/build.xml
+++ b/deploy/build.xml
@@ -204,7 +204,7 @@
     </condition>
     <fail unless="copyfile.properties">Missing either local.file or remote.file</fail>
     <scp localFile="${local.file}" remoteToFile="root@${deploy.server}:${remote.file}" keyfile="${deploy.auth}"
-      trust="true" />
+      trust="true" verbose="true" />
     <antcall target="ssh-exec">
       <param name="ssh.command" value="chown ${tomcat.instance}:tomcat ${remote.file}" />
     </antcall>
