git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/rice-2.0@2837 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/build.xml
+++ b/deploy/build.xml
@@ -204,6 +204,7 @@
       </and>
     </condition>
     <fail unless="copyfile.properties">Missing either local.file or remote.file</fail>
+    <echo>Copy ${local.file} to root@${deploy.server}:${remote.file}</echo>
     <scp localFile="${local.file}" remoteToFile="root@${deploy.server}:${remote.file}" keyfile="${deploy.auth}"
       trust="true" verbose="${scp.verbose}" />
     <antcall target="ssh-exec">
