--- a/deploy/build.xml
+++ b/deploy/build.xml
@@ -204,7 +204,7 @@
       </and>
     </condition>
     <fail unless="copyfile.properties">Missing either local.file or remote.file</fail>
-    <echo>Copy ${local.file} to ${deploy.server}:${remote.file}</echo>
+    <echo>scp ${local.file} to ${deploy.server}:${remote.file}</echo>
     <scp localFile="${local.file}" remoteToFile="root@${deploy.server}:${remote.file}" keyfile="${deploy.auth}"
       trust="true" verbose="${scp.verbose}" />
     <antcall target="ssh-exec">
