--- a/maven-ecl-plugin/pom.xml
+++ b/maven-ecl-plugin/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
   <parent>
@@ -7,11 +6,10 @@
     <artifactId>kuali-common</artifactId>
     <version>22</version>
   </parent>
-  <groupId>org.kuali.maven-plugins</groupId>
+  <groupId>org.kuali.maven.plugins</groupId>
   <artifactId>maven-ecl-plugin</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <name>Maven ECL Plugin</name>
-  <url>http://${kuali.site.hostname}/spring/${project.artifactId}/${project.version}</url>
   <description>Plugin for helping out with uniform application of the ECL 2.0 license header text</description>
   <properties>
     <kuali.spring.version>3.0.5.RELEASE</kuali.spring.version>
@@ -25,6 +23,11 @@
   </scm>
   <dependencies>
     <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-core</artifactId>
+      <version>2.0</version>
+    </dependency>
+    <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
       <version>2.1</version>
@@ -33,11 +36,6 @@
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
       <version>2.6</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-test</artifactId>
-      <version>${kuali.spring.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
@@ -66,11 +64,6 @@
       <artifactId>slf4j-log4j12</artifactId>
       <scope>test</scope>
       <version>${kuali.slf4j.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>cglib</groupId>
-      <artifactId>cglib</artifactId>
-      <version>${kuali.cglib.version}</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
