--- a/maven-ecl-plugin/pom.xml
+++ b/maven-ecl-plugin/pom.xml
@@ -10,6 +10,7 @@
   <artifactId>maven-ecl-plugin</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <name>Maven ECL Plugin</name>
+  <packaging>maven-plugin</packaging>
   <description>Plugin for helping out with uniform application of the ECL 2.0 license header text</description>
   <properties>
     <kuali.spring.version>3.0.5.RELEASE</kuali.spring.version>
