--- a/db/impex/bootstrap/client/pom.xml
+++ b/db/impex/bootstrap/client/pom.xml
@@ -17,16 +17,42 @@
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <name>Rice Impex Demo</name>
+  <name>Rice Impex Bootstrap Client</name>
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.kuali.rice</groupId>
     <artifactId>rice-impex</artifactId>
     <version>2.0.0-b1-SNAPSHOT</version>
   </parent>
-  <artifactId>rice-impex-demo</artifactId>
-  <modules>
-    <module>client</module>
-    <module>server</module>
-  </modules>
+  <artifactId>rice-impex-bootstrap-client</artifactId>
+  <properties>
+    <impex.username>RICEBOOTSTRAPCLIENT</impex.username>
+    <impex.password>RICEBOOTSTRAPCLIENT</impex.password>
+    <impex.database>RICEBOOTSTRAPCLIENT</impex.database>
+  </properties>
+  <profiles>
+    <profile>
+      <id>export</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.kuali.maven.plugins</groupId>
+            <artifactId>maven-impex-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>export</id>
+                <phase>generate-resources</phase>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>commit</id>
+      <properties>
+        <scm.phase>process-resources</scm.phase>
+      </properties>
+    </profile>
+  </profiles>
 </project>
