--- a/db/impex/bootstrap/server/pom.xml
+++ b/db/impex/bootstrap/server/pom.xml
@@ -17,16 +17,17 @@
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <name>Rice Impex Demo</name>
+  <name>Rice Impex Bootstrap Server</name>
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.kuali.rice</groupId>
     <artifactId>rice-impex</artifactId>
     <version>2.0.0-b1-SNAPSHOT</version>
   </parent>
-  <artifactId>rice-impex-demo</artifactId>
-  <modules>
-    <module>client</module>
-    <module>server</module>
-  </modules>
+  <artifactId>rice-impex-bootstrap-server</artifactId>
+  <properties>
+    <impex.username>RICEBOOTSTRAPSERVER</impex.username>
+    <impex.password>RICEBOOTSTRAPSERVER</impex.password>
+    <impex.database>RICEBOOTSTRAPSERVER</impex.database>
+  </properties>
 </project>
