--- a/db/impex/demo/client/pom.xml
+++ b/db/impex/demo/client/pom.xml
@@ -17,7 +17,7 @@
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <name>Rice Impex Demo</name>
+  <name>Rice Impex Demo Client</name>
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.kuali.rice</groupId>
@@ -25,8 +25,9 @@
     <version>2.0.0-b1-SNAPSHOT</version>
   </parent>
   <artifactId>rice-impex-demo</artifactId>
-  <modules>
-    <module>client</module>
-    <module>server</module>
-  </modules>
+  <properties>
+    <impex.username>RICEDEMOCLIENT</impex.username>
+    <impex.password>RICEDEMOCLIENT</impex.password>
+    <impex.database>RICEDEMOCLIENT</impex.database>
+  </properties>
 </project>
