git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/rice-2.0@2926 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/db/impex/bootstrap/pom.xml
+++ b/db/impex/bootstrap/pom.xml
@@ -25,6 +25,7 @@
     <version>2.0.0-b1-SNAPSHOT</version>
   </parent>
   <artifactId>rice-impex-bootstrap</artifactId>
+  <packaging>pom</packaging>
   <modules>
     <module>client</module>
     <module>server</module>
