--- a/db/impex/demo/client/pom.xml
+++ b/db/impex/demo/client/pom.xml
@@ -24,7 +24,7 @@
     <artifactId>rice-impex</artifactId>
     <version>2.0.0-b1-SNAPSHOT</version>
   </parent>
-  <artifactId>rice-impex-demo</artifactId>
+  <artifactId>rice-impex-demo-client</artifactId>
   <properties>
     <impex.username>RICEDEMOCLIENT</impex.username>
     <impex.password>RICEDEMOCLIENT</impex.password>
