--- a/db/impex/master/pom.xml
+++ b/db/impex/master/pom.xml
@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright 2005-2011 The Kuali Foundation
+  Copyright 2005-2011 The Kuali Foundation
 
-    Licensed under the Educational Community License, Version 2.0 (the "License");
-    you may not use this file except in compliance with the License.
-    You may obtain a copy of the License at
+  Licensed under the Educational Community License, Version 2.0 (the "License");
+  you may not use this file except in compliance with the License.
+  You may obtain a copy of the License at
 
-    http://www.opensource.org/licenses/ecl2.php
+  http://www.opensource.org/licenses/ecl2.php
 
-    Unless required by applicable law or agreed to in writing, software
-    distributed under the License is distributed on an "AS IS" BASIS,
-    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    See the License for the specific language governing permissions and
-    limitations under the License.
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <name>Rice Impex Master</name>
   <modelVersion>4.0.0</modelVersion>
   <parent>
@@ -46,11 +45,41 @@
       </properties>
     </profile>
     <profile>
-      <id>demo</id>
+      <id>demo-client</id>
       <properties>
-        <impex.username>RICEDEMO</impex.username>
-        <impex.password>RICEDEMO</impex.password>
-        <impex.database>RICEDEMO</impex.database>
+        <impex.username>RICEDEMOCLIENT</impex.username>
+        <impex.password>RICEDEMOCLIENT</impex.password>
+        <impex.database>RICEDEMOCLIENT</impex.database>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.kuali.maven.plugins</groupId>
+            <artifactId>sql-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>cleanup</id>
+                <phase>install</phase>
+                <goals>
+                  <goal>execute</goal>
+                </goals>
+                <configuration>
+                  <resourceLocations>
+                    <resourceLocation>classpath:demo-client-dataset-cleanup.sql</resourceLocation>
+                  </resourceLocations>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>demo-server</id>
+      <properties>
+        <impex.username>RICEDEMOSERVER</impex.username>
+        <impex.password>RICEDEMOSERVER</impex.password>
+        <impex.database>RICEDEMOSERVER</impex.database>
       </properties>
       <build>
         <plugins>
@@ -76,11 +105,11 @@
       </build>
     </profile>
     <profile>
-      <id>bootstrap</id>
+      <id>bootstrap-server</id>
       <properties>
-        <impex.username>RICEBOOTSTRAP</impex.username>
-        <impex.password>RICEBOOTSTRAP</impex.password>
-        <impex.database>RICEBOOTSTRAP</impex.database>
+        <impex.username>RICEBOOTSTRAPSERVER</impex.username>
+        <impex.password>RICEBOOTSTRAPSERVER</impex.password>
+        <impex.database>RICEBOOTSTRAPSERVER</impex.database>
       </properties>
       <build>
         <plugins>
@@ -99,6 +128,38 @@
                   <resourceLocations>
                     <resourceLocation>classpath:demo-server-dataset-cleanup.sql</resourceLocation>
                     <resourceLocation>classpath:bootstrap-server-dataset-cleanup.sql</resourceLocation>
+                  </resourceLocations>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>bootstrap-client</id>
+      <properties>
+        <impex.username>RICEBOOTSTRAPCLIENT</impex.username>
+        <impex.password>RICEBOOTSTRAPCLIENT</impex.password>
+        <impex.database>RICEBOOTSTRAPCLIENT</impex.database>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.kuali.maven.plugins</groupId>
+            <artifactId>sql-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>cleanup</id>
+                <phase>install</phase>
+                <goals>
+                  <goal>execute</goal>
+                </goals>
+                <configuration>
+                  <orderFile>descending</orderFile>
+                  <resourceLocations>
+                    <resourceLocation>classpath:demo-client-dataset-cleanup.sql</resourceLocation>
+                    <resourceLocation>classpath:bootstrap-client-dataset-cleanup.sql</resourceLocation>
                   </resourceLocations>
                 </configuration>
               </execution>
