git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/rice-2.0@2932 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/db/impex/master/pom.xml
+++ b/db/impex/master/pom.xml
@@ -64,6 +64,7 @@
                   <goal>execute</goal>
                 </goals>
                 <configuration>
+                  <orderFile>descending</orderFile>
                   <resourceLocations>
                     <resourceLocation>${dataset.cleanup.1}</resourceLocation>
                     <resourceLocation>${dataset.cleanup.2}</resourceLocation>
