--- a/db/impex/bootstrap/client/pom.xml
+++ b/db/impex/bootstrap/client/pom.xml
@@ -21,7 +21,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.kuali.rice</groupId>
-    <artifactId>rice-impex</artifactId>
+    <artifactId>rice-impex-bootstrap</artifactId>
     <version>2.0.0-b1-SNAPSHOT</version>
   </parent>
   <artifactId>rice-impex-bootstrap-client</artifactId>
