git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/rice-2.0/trunk@2951 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/db/impex/client/bootstrap/pom.xml
+++ b/db/impex/client/bootstrap/pom.xml
@@ -21,13 +21,13 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.kuali.rice</groupId>
-    <artifactId>rice-impex-demo</artifactId>
+    <artifactId>rice-impex-client</artifactId>
     <version>2.0.0-b1-SNAPSHOT</version>
   </parent>
-  <artifactId>rice-impex-demo-client</artifactId>
+  <artifactId>rice-impex-client-bootstrap</artifactId>
   <properties>
-    <impex.username>RICEDEMOCLIENT</impex.username>
-    <impex.password>RICEDEMOCLIENT</impex.password>
-    <impex.database>RICEDEMOCLIENT</impex.database>
+    <impex.username>RICECLIENTBOOTSTRAP</impex.username>
+    <impex.password>RICECLIENTBOOTSTRAP</impex.password>
+    <impex.database>RICECLIENTBOOTSTRAP</impex.database>
   </properties>
 </project>
