--- a/db/impex/server/bootstrap/pom.xml
+++ b/db/impex/server/bootstrap/pom.xml
@@ -17,17 +17,17 @@
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <name>Rice Impex Bootstrap Client</name>
+  <name>Rice Impex Server Bootstrap</name>
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.kuali.rice</groupId>
-    <artifactId>rice-impex-bootstrap</artifactId>
+    <artifactId>rice-impex-server</artifactId>
     <version>2.0.0-b1-SNAPSHOT</version>
   </parent>
-  <artifactId>rice-impex-bootstrap-client</artifactId>
+  <artifactId>rice-impex-server-bootstrap</artifactId>
   <properties>
-    <impex.username>RICEBOOTSTRAPCLIENT</impex.username>
-    <impex.password>RICEBOOTSTRAPCLIENT</impex.password>
-    <impex.database>RICEBOOTSTRAPCLIENT</impex.database>
+    <impex.username>RICESERVERBOOTSTRAP</impex.username>
+    <impex.password>RICESERVERBOOTSTRAP</impex.password>
+    <impex.database>RICESERVERBOOTSTRAP</impex.database>
   </properties>
 </project>
