--- a/db/impex/client/demo/pom.xml
+++ b/db/impex/client/demo/pom.xml
@@ -17,17 +17,17 @@
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <name>Rice Impex Demo Server</name>
+  <name>Rice Impex Client Demo</name>
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.kuali.rice</groupId>
-    <artifactId>rice-impex-demo</artifactId>
+    <artifactId>rice-impex-client</artifactId>
     <version>2.0.0-b1-SNAPSHOT</version>
   </parent>
-  <artifactId>rice-impex-demo-server</artifactId>
+  <artifactId>rice-impex-client-demo</artifactId>
   <properties>
-    <impex.username>RICEDEMOSERVER</impex.username>
-    <impex.password>RICEDEMOSERVER</impex.password>
-    <impex.database>RICEDEMOSERVER</impex.database>
+    <impex.username>RICECLIENTDEMO</impex.username>
+    <impex.password>RICECLIENTDEMO</impex.password>
+    <impex.database>RICECLIENTDEMO</impex.database>
   </properties>
 </project>
