--- a/db/impex/pom.xml
+++ b/db/impex/pom.xml
@@ -178,7 +178,7 @@
         <plugin>
           <groupId>org.kuali.maven.plugins</groupId>
           <artifactId>sql-maven-plugin</artifactId>
-          <version>1.7</version>
+          <version>1.8-SNAPSHOT</version>
           <configuration>
             <username>${impex.username}</username>
             <password>${impex.password}</password>
