--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   </parent>
   <groupId>org.kuali.maven.plugins</groupId>
   <artifactId>maven-impex-plugin</artifactId>
-  <version>1.0.26-SNAPSHOT</version>
+  <version>1.0.26</version>
   <packaging>maven-plugin</packaging>
   <name>Maven Impex Plugin</name>
   <description>Maven plugin for converting database agnostic XML files into platform specific SQL files and for examining proprietary databases via JDBC to generate database agnostic XML files</description>
@@ -112,8 +112,8 @@
     </dependency>
   </dependencies>
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/branches/maven-impex-plugin-1.0</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/branches/maven-impex-plugin-1.0</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/branches/maven-impex-plugin-1.0</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-impex-plugin-1.0.26</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-impex-plugin-1.0.26</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/tags/maven-impex-plugin-1.0.26</url>
   </scm>
 </project>
