--- a/impex/pom.xml
+++ b/impex/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.kuali</groupId>
     <artifactId>kuali-common</artifactId>
-    <version>16-SNAPSHOT</version>
+    <version>23</version>
   </parent>
   <groupId>org.kuali.db.impex</groupId>
   <artifactId>impex</artifactId>
