--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -20,7 +20,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.kuali</groupId>
   <artifactId>kuali</artifactId>
-  <version>105-SNAPSHOT</version>
+  <version>105</version>
   <packaging>pom</packaging>
   <name>The Kuali Foundation</name>
   <description>
@@ -157,9 +157,9 @@
     </snapshotRepository>
   </distributionManagement>
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/pom/trunk/parent</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/pom/trunk/parent</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/pom/trunk/parent</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/pom/tags/kuali-105</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/pom/tags/kuali-105</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/pom/tags/kuali-105</url>
   </scm>
   <build>
     <extensions>
