--- a/common/pom.xml
+++ b/common/pom.xml
@@ -129,6 +129,35 @@
         <maven.build.timestamp.format>yyyy</maven.build.timestamp.format>
       </properties>
     </profile>
+    <profile>
+      <id>minsite</id>
+      <properties>
+        <kuali.report.1>index</kuali.report.1>
+        <kuali.report.2>license</kuali.report.2>
+        <kuali.report.3>license</kuali.report.3>
+        <kuali.report.4>license</kuali.report.4>
+        <kuali.report.5>license</kuali.report.5>
+        <kuali.report.6>license</kuali.report.6>
+        <kuali.report.7>license</kuali.report.7>
+        <kuali.report.8>license</kuali.report.8>
+        <kuali.report.9>license</kuali.report.9>
+        <kuali.report.10>license</kuali.report.10>
+        <kuali.report.11>license</kuali.report.11>
+        <kuali.report.12>license</kuali.report.12>
+        <kuali.report.13>license</kuali.report.13>
+        <kuali.report.14>license</kuali.report.14>
+        <kuali.report.15>license</kuali.report.15>
+        <pmd.skip>true</pmd.skip>
+        <cpd.skip>true</cpd.skip>
+        <findbugs.skip>true</findbugs.skip>
+        <checkstyle.skip>true</checkstyle.skip>
+        <cobertura.skip>true</cobertura.skip>
+        <maven.jxr.skip>true</maven.jxr.skip>
+        <kuali.jxr.phase>none</kuali.jxr.phase>
+        <maven.javadoc.skip>true</maven.javadoc.skip>
+        <kuali.clover.generate.info.phase>none</kuali.clover.generate.info.phase>
+      </properties>
+    </profile>
   </profiles>
 
   <build>
