Turn off dependency details
git-svn-id: https://svn.kuali.org/repos/foundation/pom/trunk@3009 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -306,7 +306,8 @@
                   of the parent pom -->
                 <version>${plugin.project.info.reports.version}</version>
                 <configuration>
-                  <dependencyLocationsEnabled>${kuali.reporting.dependency.locations}</dependencyLocationsEnabled>
+                  <dependencyDetailsEnabled>${dependency.details.enabled}</dependencyDetailsEnabled>
+                  <dependencyLocationsEnabled>${dependency.locations.enabled}</dependencyLocationsEnabled>
                 </configuration>
                 <reportSets>
                   <reportSet>
