--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -183,7 +183,7 @@
         <plugin>
           <groupId>org.kuali.maven.plugins</groupId>
           <artifactId>maven-cloudfront-plugin</artifactId>
-          <version>1.0.31-SNAPSHOT</version>
+          <version>1.0.31</version>
           <configuration>
             <organizationGroupId>${kuali.organization.group.id}</organizationGroupId>
             <forceMojoExecution>true</forceMojoExecution>
