--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -16,12 +16,11 @@
   limitations under the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.kuali</groupId>
   <artifactId>kuali</artifactId>
-  <version>106-SNAPSHOT</version>
+  <version>106</version>
   <packaging>pom</packaging>
   <name>The Kuali Foundation</name>
   <description>
@@ -160,9 +159,9 @@
     </snapshotRepository>
   </distributionManagement>
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/pom/trunk/parent</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/pom/trunk/parent</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/pom/trunk/parent</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/pom/tags/kuali-106</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/pom/tags/kuali-106</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/pom/tags/kuali-106</url>
   </scm>
   <build>
     <extensions>
